Set up sveltekit i18n

--- a/src/lib/i18n/locales/de.json
+++ b/src/lib/i18n/locales/de.json
@@ -1,5 +1,6 @@
 {
     "homepage": "Startseite",
+    "about": "Über uns",
     "page_title": "Page title",
     "sign_in": "Sign in",
     "sign_up": "Sign up"
