Add images on homepage

--- a/src/lib/translations/en/common.json
+++ b/src/lib/translations/en/common.json
@@ -1,6 +1,7 @@
 {
     "homepage": "Homepage",
     "about": "About",
+    "contact_page": "Contact page",
     "page_title": "Page title",
     "sign_in": "Sign in",
     "sign_up": "Sign up"
