--- a/src/lib/translations/fr/common.json
+++ b/src/lib/translations/fr/common.json
@@ -1,6 +1,7 @@
 {
     "homepage": "Accueil",
     "about": "A propos",
+    "contact_page": "Page de contact",
     "page_title": "Page title",
     "sign_in": "Sign in",
     "sign_up": "Sign up"
