--- a/src/lib/translations/fr/common.json
+++ b/src/lib/translations/fr/common.json
@@ -2,7 +2,8 @@
     "homepage": "Accueil",
     "about": "A propos",
     "contact_page": "Page de contact",
-    "page_title": "Page title",
-    "sign_in": "Sign in",
-    "sign_up": "Sign up"
+    "page_title": "Titre de la page",
+    "sign_in": "Login",
+    "sign_up": "S'enregistrer",
+    "close": "Fermer"
 }
