--- a/src/lib/translations/de/common.json
+++ b/src/lib/translations/de/common.json
@@ -4,5 +4,6 @@
     "contact_page": "Contact page",
     "page_title": "Page title",
     "sign_in": "Sign in",
-    "sign_up": "Sign up"
+    "sign_up": "Sign up",
+    "close": "Close"
 }
