--- a/src/lib/translations/de/home.json
+++ b/src/lib/translations/de/home.json
@@ -1,4 +1,15 @@
 {
-    "title": "Meine Wohnung in Veysonnaz",
-    "description": "Sehr schöne Wohnung zur Miete für vier oder fünf Personen. Es verfügt über zwei Schlafzimmer mit je zwei Betten, ein Schlafzimmer mit zwei Etagenbetten, ein Wohn-/Esszimmer und zwei Badezimmer. Die Wohnung ist gut gelegen mit Südwestausrichtung, schöner Aussicht auf das Dorf Nendaz im gegenüberliegenden Tal und optimaler Sonneneinstrahlung. Es gibt zwei große Balkone, auf denen Sie in Ruhe entspannen und die frische Bergluft genießen können. Private überdachte Parkplätze stehen ebenfalls zur Verfügung."
+    "to_rent": "Zu vermieten in Veysonnaz (VS)",
+    "title": "Meine Wohnung in Veysonnaz (VS)",
+    "description": "Sehr schöne Wohnung zur Miete für vier oder fünf Personen. Es verfügt über zwei Schlafzimmer mit je zwei Betten, ein Schlafzimmer mit zwei Etagenbetten, ein Wohn-/Esszimmer und zwei Badezimmer. Die Wohnung ist gut gelegen mit Südwestausrichtung, schöner Aussicht auf das Dorf Nendaz im gegenüberliegenden Tal und optimaler Sonneneinstrahlung. Es gibt zwei große Balkone, auf denen Sie in Ruhe entspannen und die frische Bergluft genießen können. Private überdachte Parkplätze stehen ebenfalls zur Verfügung.",
+    "salon": "Wohnzimmer",
+    "salle_a_manger": "Esszimmer",
+    "cuisine": "Küche",
+    "interieur": "Innere",
+    "immeuble": "Gebäude",
+    "plan": "Karte (zum Vergrößern anklicken)",
+    "info_and_contact": "Infos & Kontakt",
+    "domain": "Domaine des 4 Vallées (zum Vergrößern anklicken)",
+    "home": "Willkommen",
+    "price": "Preise"
 }
