--- a/src/lib/translations/fr/home.json
+++ b/src/lib/translations/fr/home.json
@@ -1,4 +1,15 @@
 {
-    "title": "Mon appartement à Veysonnaz",
-    "description": "Très bel appartement à louer pour quatre ou cinq personnes. Il comprend deux chambres à coucher avec chacune deux lits, une chambre avec deux lits superposés, un salon/salle à manger et deux salles d'eau. L'appartement est bien situé avec une orientation sud-ouest, une très belle vue sur le village de Nendaz dans la vallée d'en face et un ensoleillement optimal. Il y a deux grands balcons où il est possible de se relaxer tranquillement et profiter du bon air de la montagne. Un parking privé couvert est aussi à disposition."
+    "to_rent": "A louer à Veysonnaz",
+    "title": "Mon appartement à Veysonnaz (VS)",
+    "description": "Très bel appartement à louer pour quatre ou cinq personnes. Il comprend deux chambres à coucher avec chacune deux lits, une chambre avec deux lits superposés, un salon/salle à manger et deux salles d'eau. L'appartement est bien situé avec une orientation sud-ouest, une très belle vue sur le village de Nendaz dans la vallée d'en face et un ensoleillement optimal. Il y a deux grands balcons où il est possible de se relaxer tranquillement et profiter du bon air de la montagne. Un parking privé couvert est aussi à disposition.",
+    "salon": "Salon",
+    "salle_a_manger": "Salle à manger",
+    "cuisine": "Cuisine",
+    "interieur": "Intérieur",
+    "immeuble": "Immeuble",
+    "plan": "Plan (cliquer pour agrandir)",
+    "info_and_contact": "Info & Contact",
+    "domain": "Domaine des 4 Vallées (cliquez pour agrandir)",
+    "home": "Accueil",
+    "price": "Tarifs"
 }
